--- a/pom.xml
+++ b/pom.xml
@@ -110,5 +110,10 @@
             <version>0.2.7</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>5.1</version>
+        </dependency>
     </dependencies>
 </project>
